kubernetes/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-boilerplate-svc
spec:
  selector:
    app: python-boilerplate
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
