kubernetes/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-boilerplate-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: python-app.54.251.118.68.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: python-boilerplate-svc
            port:
              number: 80
